# banking-system

./: .gitignore  Taskfile.yaml
deploy/: docker-compose.yml
deploy/nginx/: nginx.conf
deploy/postgres-init/: init.sql
docs/: docs.go  swagger.json  swagger.yaml
proto/card_vault/v1/: card_vault.proto
src/service-account/: Dockerfile  README.md  go.mod  go.sum  sqlc.yaml
src/service-account/config/: local.yaml  prod.yaml
src/service-account/docs/: docs.go  swagger.json  swagger.yaml
src/service-account/migrations/: 000001_init.down.sql  000001_init.up.sql  000001_seed_dictionaries.down.sql  000002_add_indexes_to_transactions.down.sql  000002_seed_dictionaries.up.sql  000003_add_indexes_to_transactions.up.sql
src/service-card-secure/: Cargo.toml  Dockerfile  README.md  build.rs
src/service-card-secure/config/: local.yaml
src/service-card-secure/migrations/: 000001_create_vault_cards_table.down.sql  000001_create_vault_cards_table.up.sql
src/service-card-secure/src/: config.rs  main.rs
src/service-card-secure/src/domain/: errors.rs  mod.rs  models.rs  ports.rs
src/service-card-secure/src/handler/: grpc_server.rs  mod.rs  pb.rs
src/service-card-secure/src/infrastructure/: crypto_service.rs  generator.rs  mod.rs  postgres_repo.rs
src/service-card-secure/src/service/: mod.rs  use_cases.rs
src/service-community/: Dockerfile  README.md  go.mod  go.sum  sqlc.yaml
src/service-investment-and-exchange/: Dockerfile  main.py
src/service-notification/: Dockerfile  README.md  go.mod  go.sum
src/service-sso/: Dockerfile  main.py  requirements.txt
(+238 files in other folders)
