[package]
name = "service-card-secure"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

tonic = "0.11"
prost = "0.12"

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"

uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = "0.4"
dotenvy = "0.15"

serde = { version = "1.0", features = ["derive"] }
config = "0.14.1"
hex = "0.4.3"
async-trait = "0.1.89"

[build-dependencies]
tonic-build = "0.11.0"